--- a/.github/workflows/reg_tests.yml
+++ b/.github/workflows/reg_tests.yml
@@ -21,6 +21,6 @@ jobs:
         docker exec -i regtest /bin/bash -c "rm -rf ${{ env.DOCKER_WORKING_DIR}} && cp -r ${{env.DOCKER_MOUNT_DIR}} ${{env.DOCKER_WORKING_DIR}}"
         docker exec regtest sed -i 's/$HOME/$DAFOAM_ROOT_PATH/g' ${{env.DOCKER_WORKING_DIR}}/etc/bashrc
         docker exec regtest sed -i 's/export WM_CODI_AD_MODE=CODI_AD_FORWARD/export WM_CODI_AD_MODE=CODI_AD_REVERSE/g' ${{env.DOCKER_WORKING_DIR}}/etc/bashrc
-        docker exec -i regtest /bin/bash -c ". /home/dafoamuser/loadDAFoam.sh && cd ${{env.DOCKER_WORKING_DIR}} && export WM_NCOMPPROCS=4 && ./Allmake 2> log"
+        docker exec -i regtest /bin/bash -c ". /home/dafoamuser/loadDAFoam.sh && cd ${{env.DOCKER_WORKING_DIR}} && export WM_NCOMPPROCS=4 && ./Allwmake 2> log"
         docker exec -i regtest /bin/bash -c ". /home/dafoamuser/loadDAFoam.sh && cd ${{env.DOCKER_WORKING_DIR}}/tests/simpleFoamAD && ./Allrun.sh"
 
