--- a/.github/workflows/reg_tests.yml
+++ b/.github/workflows/reg_tests.yml
@@ -1,9 +1,9 @@
-name: OF1812-AD
+name: Regression Test
 
 on: [push, pull_request]
 
 env:
-  DOCKER_WORKING_DIR: '/home/dafoamuser/OpenFOAM/OpenFOAM-v1812-AD'
+  DOCKER_WORKING_DIR: '/home/dafoamuser/dafoam/OpenFOAM/OpenFOAM-v1812-AD'
   DOCKER_MOUNT_DIR: '/home/dafoamuser/mount/OpenFOAM-v1812-AD'
   DOCKER_TAG: 'latest'
 
