--- a/.github/workflows/reg_tests.yml
+++ b/.github/workflows/reg_tests.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 env:
   DOCKER_WORKING_DIR: '/home/dafoamuser/dafoam/OpenFOAM/OpenFOAM-v1812-AD'
   DOCKER_MOUNT_DIR: '/home/dafoamuser/mount/OpenFOAM-v1812-AD'
-  DOCKER_TAG: 'v4'
+  DOCKER_TAG: 'latest'
 
 jobs:
 
@@ -20,7 +20,7 @@ jobs:
         docker run -i -d -u dafoamuser --name regtest -v $GITHUB_WORKSPACE:${{env.DOCKER_MOUNT_DIR}} dafoam/opt-packages:${{env.DOCKER_TAG}} /bin/bash
         docker exec -i regtest /bin/bash -c "rm -rf ${{ env.DOCKER_WORKING_DIR}} && cp -r ${{env.DOCKER_MOUNT_DIR}} ${{env.DOCKER_WORKING_DIR}}"
         docker exec regtest sed -i 's/$HOME/$DAFOAM_ROOT_PATH/g' ${{env.DOCKER_WORKING_DIR}}/etc/bashrc
-        docker exec regtest sed -i 's/export WM_CODI_AD_MODE=CODI_AD_FORWARD/export WM_CODI_AD_MODE=CODI_AD_REVERSE/g' ${{env.DOCKER_WORKING_DIR}}/etc/bashrc
+        docker exec regtest sed -i 's/export WM_CODI_AD_LIB_POSTFIX=ADF/export WM_CODI_AD_LIB_POSTFIX=ADR/g' ${{env.DOCKER_WORKING_DIR}}/etc/bashrc
         docker exec -i regtest /bin/bash -c ". /home/dafoamuser/dafoam/loadDAFoam.sh && cd ${{env.DOCKER_WORKING_DIR}} && source etc/bashrc && export WM_NCOMPPROCS=4 && ./Allwmake 2> log"
         docker exec -i regtest /bin/bash -c ". /home/dafoamuser/dafoam/loadDAFoam.sh && cd ${{env.DOCKER_WORKING_DIR}} && source etc/bashrc && cd tests/simpleFoamAD && ./Allrun.sh"
 
